<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragment.Resolver_ejercicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Resolver_ejercicio"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ejercicio_resuelto"
            />

        <!--
        <EditText
            android:id="@+id/edt_ingrese_su_ejercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorHint"
            android:hint="@string/Ingrese_su_ejercicio"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="30sp" />
        -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_sin_fondo"
            android:text="@string/Adjuntar_texto"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded_sin_fondo"
            android:text="@string/Adjuntar_imagen"
            android:textColor="@color/colorWhite" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/Publicar_respuesta"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</LinearLayout>