<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Bienvenido"
                android:textColor="@color/colorWhite"
                android:layout_marginRight="10dp"
                android:textSize="25dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Proponer_ejercicio"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_proponer_ejercicio"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@drawable/ic_proponer_ejercicio" />


            <ImageButton
                android:id="@+id/btn_mis_ejercicios"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@drawable/listado_preguntas" />


        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Resolver_ejercicio"
                android:textColor="@color/colorWhite"
                android:textSize="25dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_resolver_ejercicio"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/ic_resolver_ejercicio" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>