<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegistrarRespuestaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Proponer_ejercicio"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />
        -->

        <ImageView
            android:id="@+id/img_camara"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:src="@drawable/camara"
            />

        <!--
        <EditText
            android:id="@+id/edt_ingrese_su_ejercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorHint"
            android:hint="@string/Ingrese_su_ejercicio"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:textSize="30sp" />
        -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint">

            <EditText
                android:id="@+id/edt_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorHint"
                android:hint="@string/Indicacion"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>
<!--
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorHint">

            <EditText
                android:id="@+id/edt_tema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorHint"
                android:hint="@string/Tema"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        -->

        <Button
            android:id="@+id/btn_adjuntar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded_sin_fondo"
            android:text="@string/Adjuntar_imagen"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btn_publicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/Publicar_ejercicio"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</LinearLayout>